<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2021 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  

  <!--
    The "fullscreen" and "fullscreen-sticky" TWA manifest values correspond to "immersive" and "sticky-immersive"
    AndroidManifest values.
  -->
  

  <!--
    This variable below expresses the relationship between the app and the site,
    as documented in the TWA documentation at
    https://developers.google.com/web/updates/2017/10/using-twa#set_up_digital_asset_links_in_an_android_app
    and is injected into the AndroidManifest.xml
  -->
  <string name="assetStatements">
    [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
            \"namespace\": \"web\",
            \"site\": \"https://ottline.app\"
        }
    }]
    
  </string>  

  <string name="share_target">
  {
      \"action\": \"https://ottline.app/?quick=1&amp;quick_focus=1\",
      \"method\": \"GET\",
      \"params\": {
          \"title\": \"shared_subject\",
          \"text\": \"shared_text\",
          \"url\": \"shared_url\"
      }
  }
  </string>

  <string name="widget_brand_label">OTTLINE</string>
  <string name="widget_quick_log_title">빠른 기록</string>
  <string name="widget_quick_log_subtitle">영상과 책을 바로 골라 남깁니다.</string>
  <string name="widget_quick_log_description">영상 기록, 책 기록, 타임라인을 빠르게 여는 홈 화면 위젯입니다.</string>
  <string name="widget_action_record">기록하기</string>
  <string name="widget_action_record_hint">검색창을 바로 열어요</string>
  <string name="widget_action_video">영상</string>
  <string name="widget_action_video_hint">영화·시리즈</string>
  <string name="widget_action_book">책</string>
  <string name="widget_action_book_hint">도서 기록</string>
  <string name="widget_action_timeline">타임라인</string>
  <string name="widget_action_timeline_hint">최근 기록 흐름으로 이동</string>
</resources>
