<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_container_bg"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_brand_badge_bg"
        android:letterSpacing="0.08"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/widget_brand_label"
        android:textColor="@color/widget_brand_text"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/widget_quick_log_title"
        android:textColor="@color/widget_title_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/widget_quick_log_subtitle"
        android:textColor="@color/widget_body_text"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/widget_action_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/widget_video_bg"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/widget_video_icon_badge_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/widget_action_video"
                    android:src="@android:drawable/ic_media_play"
                    android:tint="@color/widget_video_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/widget_action_video"
                android:textColor="@color/widget_action_text"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/widget_action_video_hint"
                android:textColor="@color/widget_action_hint"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_action_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/widget_book_bg"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/widget_book_icon_badge_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/widget_action_book"
                    android:src="@android:drawable/ic_menu_agenda"
                    android:tint="@color/widget_book_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/widget_action_book"
                android:textColor="@color/widget_action_text"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/widget_action_book_hint"
                android:textColor="@color/widget_action_hint"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_action_timeline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.82"
        android:background="@drawable/widget_timeline_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/widget_timeline_icon_badge_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/widget_action_timeline"
                    android:src="@android:drawable/ic_menu_recent_history"
                    android:tint="@color/widget_timeline_icon" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_action_timeline"
                    android:textColor="@color/widget_action_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/widget_action_timeline_hint"
                    android:textColor="@color/widget_action_hint"
                    android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
